tests/error/array_errors/array_index_nested_array.err
Error: Index out of bounds (at $FILE:7:13)
  | 
5 | def main() -> None:
6 |       matrix = array(array(i + j for i in range(10)) for j in range(5))
7 |       return matrix[5][0]
  |              ^^^^^^ Array index 5 is out of bounds for array of size 5.

Guppy compilation failed due to 1 previous error
